@@ -44,7 +44,7 @@ Command failed with exception: Unsupported database file version or invalid file
     export MB_DB_USER=<username>
     export MB_DB_PASS=<password>
     export MB_DB_HOST=localhost
-    java -jar metabase.jar load-from-h2 /path/to/metabase.db # do not include .mv.db
+    java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar load-from-h2 /path/to/metabase.db # do not include .mv.db
     ```
 
 If you're using a [Pro or Enterprise version of Metabase][enterprise], you can use [serialization][serialization-docs] to snapshot your application database. Serialization is useful when you want to [preload questions and dashboards][serialization-learn] in a new Metabase instance.
@@ -73,7 +73,7 @@ liquibase.exception.DatabaseException: liquibase.exception.LockException: Could 
 1.  Open a shell on the server where Metabase is installed and manually clear the locks by running:
 
     ```
-    java -jar metabase.jar migrate release-locks
+    java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar migrate release-locks
     ```
 
 2.  Once this command completes, restart your Metabase instance normally (_without_ the `migrate release-locks` flag).
@@ -85,7 +85,7 @@ liquibase.exception.DatabaseException: liquibase.exception.LockException: Could 
 **Steps to take:** Error messages can vary depending on how the app database was corrupted, but in most cases the log message will mention `h2`. A typical command and message are:
 
 ```
-myUser@myIp:~$ java -cp metabase.jar org.h2.tools.RunScript -script whatever.sql -url jdbc:h2:~/metabase.db
+myUser@myIp:~$ java --add-opens java.base/java.nio=ALL-UNNAMED -cp metabase.jar org.h2.tools.RunScript -script whatever.sql -url jdbc:h2:~/metabase.db
 Exception in thread "main" org.h2.jdbc.JdbcSQLException: Row not found when trying to delete from index """"".I37: ( /* key:7864 */ X'5256470012572027c82fc5d2bfb855264ab45f8fec4cf48b0620ccad281d2fe4', 165)" [90112-194]
     at org.h2.message.DbException.getJdbcSQLException(DbException.java:345)
     [etc]
@@ -102,7 +102,7 @@ mv metabase.db.mv.db metabase-old.db.mv.db
 
 touch metabase.db.mv.db
 
-java -cp target/uberjar/metabase.jar org.h2.tools.RunScript -script metabase.db.h2.sql -url jdbc:h2:`pwd`/metabase.db
+java --add-opens java.base/java.nio=ALL-UNNAMED -cp target/uberjar/metabase.jar org.h2.tools.RunScript -script metabase.db.h2.sql -url jdbc:h2:`pwd`/metabase.db
 ```
 
 ## Are you running Metabase with H2 on Windows 10?
